# Monitoreo_GEE

./: Monitoreo_de_Acuiferos.ipynb  Monitoreo_de_Presas.ipynb  README.md  linux_install.sh  linux_run.sh  pyproject.toml  win_install.bat  win_run.bat
data/: Acuiferos.dbf  Acuiferos.mshp  Acuiferos.shp  Acuiferos.shx  Presas.dbf  Presas.mshp  Presas.qix  Presas.shp  Presas.shx  presas_info.csv
